config/event-buddy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-buddy
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: event-buddy
  template:
    metadata:
      labels:
        app: event-buddy
    spec:
      containers:
      - image: ghcr.io/petercort/event-buddy:0.0.4
        name: event-buddy
        ports:
        - containerPort: 80
      volumeMounts:
      - name: azure-secrets-store
        mountPath: "/mnt/secrets-store"
        readOnly: true
  volumes:
    - name: azure-secrets-store
      csi:
        driver: secrets-store.csi.k8s.io
        readOnly: true
        volumeAttributes:
          secretProviderClass: "sc-demo-keyvault-csi"
