config/event-buddy-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-buddy
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: event-buddy
